...
                  viewModel.pendingSchedules.isEmpty) {
                return Skeletonizer(
                  child: ListView(
                    children: [
                      Skeleton.ignore(
                        child: Text(
                          'Jadwal Bimbingan',
                          style: Theme.of(context).textTheme.titleLarge,
                        ),
                      ),
                      Skeleton.ignore(
                        child: Padding(
                          padding: const EdgeInsets.symmetric(vertical: 16.0),
...
                  'Tolak',
                  style: GoogleFonts.poppins(fontWeight: FontWeight.bold),
                ),
              ),
              const SizedBox(width: 12),
              TextButton(
                key: const Key('btnSetujuJadwal'),
                onPressed: () => _showSetujuBottomSheet(bimbingan),
                style: TextButton.styleFrom(
                  backgroundColor: const Color(0xFFB7FCC9),
                  foregroundColor: const Color(0xFF0A7D0C),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(30),
...
