...
        child: Padding(
          padding: const EdgeInsets.symmetric(horizontal: 24),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              // Added logo, similar to LandingScreen
              Image.asset(key: const Key('imgLogo'), 'assets/img/digita_logo.png', height: 300),
              const SizedBox(height: 48),
              const CircularProgressIndicator(),
              const SizedBox(height: 20),
              const Text("Cek Sesi Login..."),
            ],
          ),
...
